fix: :lipstick: Fix paragraph spacing and add list style in rich text component.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -47,7 +47,7 @@ h5 {
 
 p {
   margin: 0;
-  line-height: 175%;
+  line-height: 150%;
   word-wrap: break-word;
   @media (max-width: 1024px) {
     line-height: 140%;
@@ -60,9 +60,9 @@ button {
 }
 
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  // margin: 0;
+  // padding: 0;
+  // list-style: none;
 }
 
 img {
